[tool.poetry]
name = "soonq"
version = "0.5.0"
description = "A subprocess-based task queue library."
authors = ["Nathaniel Jones <nathaniel-j-jones@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
